tests/src/frontend/typechecking/invalid/pattern_match_constraints3.sk
base class CBase
class C1() extends CBase
class C2() extends CBase

base class Bar<+T>
class Foo() extends Bar<C2>

fun matcher<T: C1>(x: Bar<T>): Int {
  x match {
  | Foo() -> 42
  }
}
